# Langchain-Chatchat

./: .gitignore  README.md  README_en.md  __init__.py  pyproject.toml  requirements.txt  setup.py
configs/: model_config.py
fmchain/: __init__.py  init_database.py  startup.py  webui.py
fmchain/chains/: llmchain_with_history.py
fmchain/configs/: model_config.py  server_config.py
fmchain/server/: api.py  llm_api.py  utils.py  webui_allinone_stale.py
fmchain/server/chain/: FMChain.py
fmchain/server/chat/: chat.py  knowledge_base_chat.py  openai_chat.py  search_engine_chat.py  utils.py
fmchain/server/db/: base.py  session.py
fmchain/server/db/models/: knowledge_base_model.py  knowledge_file_model.py
fmchain/server/db/repository/: knowledge_base_repository.py  knowledge_file_repository.py
fmchain/server/knowledge_base/: kb_api.py  kb_doc_api.py  migrate.py  utils.py
fmchain/server/knowledge_base/kb_cache/: __init__.py  base.py  faiss_cache.py
fmchain/server/knowledge_base/kb_service/: __init__.py  base.py  default_kb_service.py  faiss_kb_service.py  milvus_kb_service.py  pg_kb_service.py
fmchain/server/model_workers/: __init__.py  base.py  minimax.py  qianfan.py  xinghuo.py  zhipu.py
fmchain/tests/api/: test_kb_api.py  test_kb_api_request.py  test_llm_api.py  test_stream_chat_api.py
fmchain/tests/custom_splitter/: test_different_splitter.py
fmchain/tests/kb_vector_db/: test_faiss_kb.py  test_milvus_db.py  test_pg_db.py
fmchain/tests/online_api/: test_qianfan.py
fmchain/webui_pages/: __init__.py  utils.py
fmchain/webui_pages/dialogue/: dialogue.py
fmchain/webui_pages/knowledge_base/: knowledge_base.py
fmchain/webui_pages/model_config/: model_config.py
server/chain/: FMChain.py
