[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "fmchain"
version = "0.0.1"
authors = [{name = "hy Qiu", email = "your.email@example.com"}]
description = "自定义Langchain-Chatchat"

[tool.poetry.dependencies]
python = "^3.8"

# Define your dependencies here
dependencies = [
    "langchain==0.0.287",
    "fschat[model_worker]==0.2.28",
    "openai",
    "sentence_transformers",
    "transformers>=4.31.0",
    "torch~=2.0.0",
    "fastapi~=0.99.1",
    "nltk~=3.8.1",
    "uvicorn~=0.23.1",
    "starlette~=0.27.0",
    "pydantic~=1.10.11",
    "unstructured[all-docs]>=0.10.4",
    "python-magic-bin; sys_platform == 'win32'",
    "SQLAlchemy==2.0.19",
    "faiss-cpu",
    "accelerate",
    "spacy",
    "PyMuPDF==1.22.5",
    "rapidocr_onnxruntime>=1.3.2",
    "requests",
    "pathlib",
    "pytest",
    "scikit-learn",
    "numexpr",
    "numpy~=1.24.4",
    "pandas~=2.0.3",
    "streamlit>=1.26.0",
    "streamlit-option-menu>=0.3.6",
    "streamlit-antd-components>=0.1.11",
    "streamlit-chatbox>=1.1.6,<=1.1.7",
    "streamlit-aggrid>=0.3.4.post3",
    "httpx~=0.24.1",
    "watchdog",
    "tqdm",
    "websockets",
    "mysqlclient",
    "duckduckgo-search"
]

[tool.poetry.dev-dependencies]

[tool.poetry.extras]

[tool.poetry.scripts]

[tool.poetry.source]

[tool.poetry.source.dependencies]
# Use this section if you need specific versions for the source dependencies

[tool.poetry.source.extras]
# Use this section if you have extras for the source dependencies

[tool.poetry.source.urls]
# Use this section if you need to specify custom URLs for the source dependencies

[tool.poetry.source.includes]
# Use this section to include or exclude files from the source package

[package]
name = "fmchain"
version = "0.0.1"

[package.dependencies]

[package.dev-dependencies]

[package.build-dependencies]

[package.exclude]

[workspace]

[tool.poetry.check]
allow-prereleases = false

[tool.setuptools.packages.find]

[tool.poetry.packages]
include = ["*"]
